<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Covid Shield</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_ask_req">Ask Requirements</string>
    <string name="menu_govt_fac">Govt Facilitators</string>
    <string name="menu_telemedicine">Telemedicine</string>
    <string name="menu_blddonation">Blood Donation</string>
    <string name="telemed">Log on to <a href="https://esanjeevaniopd.in/">EsanjeevaniOPD</a></string>
    <string name="a_setu">Log on to <a href="https://www.aarogyasetu.gov.in/">AarogyaSetu</a></string>
    <string name="covid_jagratha">Log on to <a href="https://covid19jagratha.kerala.nic.in/">Covid-19 Jagratha</a></string>

    <string name="requirements">Requirements</string>
    <string name="menu_helpnum">Helipline Numbers</string>
    <string name="menu_cvdgdlines">Covid Guidelines</string>
    <string name="blddon_entry">Blood Donation Data Entry</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_app_start">home screen</string>

    <string name="bold" tools:ignore="ReferenceType">@font/rubik_bold</string>
    <string name="regular" tools:ignore="ReferenceType">@font/rubik_regular</string>
    <string name="light" tools:ignore="ReferenceType">@font/rubik_light</string>
    <string name="search_by_pin">Search By PIN</string>
    <string name="search_by_district">Search By District</string>
    <string name="pin_code">PIN Code</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="menu_donport">Donation Portal</string>
    <string name="dontn_portal">Donation Portal</string>
    <string name="state">State</string>
    <string name="district">District</string>


<!--    Blood donation dropdown-->

    <string-array name="blood_donation_dropdown">
        <item>A+ve</item>
        <item>A-ve</item>
        <item>B+ve</item>
        <item>B-ve</item>
        <item>AB+ve</item>
        <item>AB-ve</item>
        <item>O+ve</item>
        <item>O-ve</item>


    </string-array>

</resources>