<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    android:padding="5dp"
    android:id="@+id/bottom_sheet_pin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/search_by_pin"
        android:textSize="@dimen/title_size"
        android:gravity="center"
        android:fontFamily="@font/rubik_bold"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/pic_code_edittext"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/pin_code"
        android:inputType="number"
        android:background="@drawable/oval"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>
    <Button
        android:id="@+id/pin_search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/color_primary"
        android:textColor="@color/white"
        android:text="@string/search"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:fontFamily="@font/rubik_regular"/>

</LinearLayout>