<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/app_start">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/color_primary"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_coronavirus"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="-30dp"/>

        <ImageView
            android:id="@+id/virus1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_coronavirus"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_toStartOf="@id/virus1"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_coronavirus" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_size2"
                android:text="India"
                android:textColor="@color/white"
                android:fontFamily="@string/bold"/>
            <TextView
                android:id="@+id/update_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size0"
                android:text="Updated at Jul 12, 2021"
                android:textColor="@color/white"
                android:layout_marginTop="2dp"
                android:fontFamily="@string/light"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:background="@color/yellow"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size0"
                            android:text="Confirm"
                            android:textColor="@color/white"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@string/regular"
                            android:layout_marginLeft="5dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:background="@color/orange"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size0"
                            android:text="Active"
                            android:textColor="@color/white"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@string/regular"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:background="@color/green_pie"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size0"
                            android:text="Recovered"
                            android:textColor="@color/white"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@string/regular"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:background="@color/red_pie"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size0"
                            android:text="Death"
                            android:textColor="@color/white"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@string/regular"/>

                    </LinearLayout>
                </LinearLayout>
                <org.eazegraph.lib.charts.PieChart
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/pieChart"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:padding="8dp"
                    app:egInnerPaddingColor="@color/color_primary"
                    app:egLegendTextSize="0sp"
                    app:egUsePieRotation="true"
                    app:egLegendHeight="0dp"
                    app:egValueTextSize="0sp"/>
            </LinearLayout>



        </LinearLayout>


    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:id="@+id/current_status_linear_layout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_above="@id/bottom_linear_layout"
            android:orientation="vertical">

            <ExpandableListView
                android:id="@+id/expandableListView"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
                android:divider="@android:color/darker_gray"
                android:dividerHeight="0.5dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/rounded_background_homescreen"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:fontFamily="@font/rubik_bold"
                android:gravity="center"
                android:text="Know about COVID-19 Vaccines"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/search_by_pin_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/oval"
                android:fontFamily="@string/regular"
                android:text="@string/search_by_pin" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/search_by_district_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/oval"
                android:fontFamily="@string/regular"
                android:text="@string/search_by_district" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/notification_background_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:buttonTint="#5600ee"
                    android:text="Save your preference for notification" />

            </RelativeLayout>



        </LinearLayout>

    </RelativeLayout>

</LinearLayout>